<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/main_header"/>
    
    <!-- 用户基本信息 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/user_info_num"/>
        <TextView 
            android:id="@+id/app_user_info_num"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black_half"
            android:textSize="12sp"
            android:gravity="right"/>
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/user_regis_time"/>
        <TextView 
            android:id="@+id/app_user_info_last_login_time"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black_half"
            android:textSize="12sp"
            android:gravity="right"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop = "10dp"
        android:orientation="horizontal"
        android:background="@color/list_view_divider_color"></LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/user_tip_info"/>
    
    <!-- 电费余额 -->
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/user_current_balance"/>
        <TextView 
            android:id="@+id/app_user_current_balance"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black_half"
            android:textSize="12sp"
            android:gravity="right"/>
    </LinearLayout>
    
     <!-- 当前用电量 -->
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/user_elec_consumption"/>
        <TextView 
            android:id="@+id/app_user_elec_consumption"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black_half"
            android:textSize="12sp"
            android:gravity="right"/>
    </LinearLayout>
    
     <!-- 剩余电量 -->
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/user_remain_elec"/>
        <TextView 
            android:id="@+id/app_user_remain_elec"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black_half"
            android:textSize="12sp"
            android:gravity="right"/>
    </LinearLayout>
    
     <!-- 峰谷电量 -->
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/user_peak_elec"/>
        <TextView 
            android:id="@+id/app_user_peak_elec"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:textColor="@color/black_half"
            android:textSize="12sp"
            android:gravity="right"/>
    </LinearLayout>
    

</LinearLayout>
