<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

	<include layout="@layout/main_header"/>
	<TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_padding"
                android:layout_marginRight="@dimen/activity_margin_padding"
                android:layout_marginTop="10dp"
                android:background="@drawable/table_ttt" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/child_margin_padding"
                        android:layout_marginTop="@dimen/child_margin_padding"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/about_us_app_version"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/app_version_info"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:layout_marginBottom="@dimen/child_margin_padding"
                        android:layout_marginLeft="@dimen/child_margin_padding"
                        android:layout_marginRight="@dimen/child_margin_padding"
                        android:layout_marginTop="@dimen/child_margin_padding"
                        android:text="@string/about_us_inner_version"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/table_back_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" 
                    android:id="@+id/phone_us">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/child_margin_padding"
                        android:layout_marginTop="@dimen/child_margin_padding"
                        android:text="@string/about_us_contact"
                        android:textColor="@color/black"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:id="@+id/app_contact_us"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/child_margin_padding"
                        android:layout_marginLeft="@dimen/child_margin_padding"
                        android:layout_marginTop="@dimen/child_margin_padding"
                        android:background="@null"
                        android:singleLine="true"/>
                </LinearLayout>
            </TableLayout>
            
	<TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_padding"
                android:layout_marginRight="@dimen/activity_margin_padding"
                android:layout_marginTop="10dp"
                android:background="@drawable/table_ttt" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/tousu" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/child_margin_padding"
                        android:layout_marginTop="@dimen/child_margin_padding"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/about_us_tousu"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/app_tousu_info"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:layout_marginBottom="@dimen/child_margin_padding"
                        android:layout_marginLeft="@dimen/child_margin_padding"
                        android:layout_marginRight="@dimen/child_margin_padding"
                        android:layout_marginTop="@dimen/child_margin_padding"
                        android:textColor="@color/black"/>
                </LinearLayout>

                
            </TableLayout>
</LinearLayout>
